--- a/html/index.html
+++ b/html/index.html
@@ -7,12 +7,16 @@
   <title>Vikas Dev - Home</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
+
   <link rel="stylesheet" href="../css/style.css">
+
 </head>
 
 <body>
 
-  <section id="header" class="header">
+  <header id="header" class="header">
 
     <!-- ************* navbar starts ***************** -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -26,20 +30,20 @@
           <ul class="navbar-nav ms-auto  mb-2 mb-lg-0">
 
             <li class="nav-item">
-              <a class="nav-link px-3 mx-1" aria-current="page" href="#">About</a>
+              <a class="nav-link px-3 mx-1" aria-current="page" href="#about-me">About</a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link px-3 mx-1" href="#">Skills</a>
+              <a class="nav-link px-3 mx-1" href="#skills">Skills</a>
             </li>
 
 
             <li class="nav-item">
-              <a class="nav-link px-3 mx-1" href="#">Service</a>
+              <a class="nav-link px-3 mx-1" href="service.html">Service</a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link px-3 mx-1" href="#">Contact Me</a>
+              <a class="nav-link px-3 mx-1" href="#contact">Contact Me</a>
             </li>
 
           </ul>
@@ -51,8 +55,8 @@
     <!-- ************ navbar ends **************** -->
 
 
-    <div class="container py-5 container-below-navbar text-white">
-      <div class="d-flex justify-content-center align-items-center text-center flex-column">
+    <div class="container-lg container-fluid py-5 container-below-navbar text-white">
+      <div class="d-flex p-0  justify-content-center align-items-center">
         <h2 class="my-5">Hello! ' <strong>Vikas</strong> ’ is here ...</h2>
       </div>
       <p>A good website is first impression of coders ...</p>
@@ -64,6 +68,120 @@
 
 
 
+  </header>
+
+
+
+
+
+
+
+
+
+
+  <section class="about-me" id="about-me">
+
+    <div class="container pt-2">
+
+      <div class="row gy-5">
+
+        <div class="col-10 offset-1 offset-lg-0 col-lg-4">
+          <img src="../img/blue-bg.jpg" alt="" class="img-fluid img-thumbnail">
+        </div>
+
+        <div class="col-10 col-lg-5 mx-auto">
+
+          <h6 class="pb-1">My Story</h6>
+          <h2 class="py-2">About Me</h2>
+          <p>My name is Vikas. 
+            I am a frontend as well as backend developer.
+            I am study in B.tech 2nd year in Dr. A. P. J. Abdul Kalam Technical University , Lucknow , U.P, India.
+            I am really enjoy my Study.
+             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic unde tempora, cupiditate aut architecto
+            quibusdam quis voluptatum aspernatur! Facilis, ipsum.</p>
+
+          <table >
+            <tr class="d-flex gap-3 my-2">
+
+              <td>
+                <a href="#" class="icons">
+                  <i class="fa-solid fa-location-dot"></i>
+                </a>
+              </td>
+              <td>Address</td>
+              <td class="px-3">:</td>
+              <td>Noida, U.P., India</td>
+
+            </tr>
+
+            <tr class="d-flex gap-3 my-2">
+
+              <td>
+                <a href="tel:+917505357857" class="icons">
+                  <i class="fa-solid fa-phone"></i>
+                </a>
+              </td>
+              <td>Phone No</td>
+              <td class="px-3">:</td>
+              <td>+91 7505357857</td>
+
+            </tr>
+
+
+
+            <tr class="d-flex gap-3 my-2">
+
+              <td>
+                <a href="#" class="icons">
+                  <i class="fa-solid fa-envelope"></i>
+                </a>
+              </td>
+              <td>Email ID</td>
+              <td class="px-3">:</td>
+              <td>VikashDev@gmail.com</td>
+
+            </tr>
+
+
+
+          </table>
+
+
+          <div>
+            <h6 class="pt-4 pb-1">My Expertise</h6>
+
+            <div class="d-flex justify-content-between">
+
+              <div>
+                <span><i class="fa-brands fa-html5"></i></span>
+                HTML
+              </div>
+
+              <div>
+                <span><i class="fa-brands fa-css3-alt"></i></span>
+                CSS
+              </div>
+
+              <div>
+                <span><i class="fa-brands fa-js"></i></span>
+                Java Script
+              </div>
+
+              <div>
+                <span><i class="fa-brands fa-node"></i></span>
+                Node JS
+              </div>
+
+
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+
+    </div>
+
   </section>
 
 
@@ -73,79 +191,113 @@
 
 
 
-    <section id="skills" class="skills">
-      <div class="container">
+  <section id="skills" class="skills">
+    <div class="container">
 
-        <h2 class="text-center">Skills of God</h2>
+      <h2 class="text-center"> My Skills </h2>
+      <p class="text-center skills-heading-p">Here is my skills to represents my Experties</p>
+      <div class="row gy-3">
+        <div class="col-lg-6 col-10 offset-1 offset-lg-0">
 
-        <div class="row">
-          <div class="col-lg-6 col-10 offset-1 offset-lg-0">
-
-            <div>
-              <p>HTML</p>
-              <div class="progress" style="height: 15px;">
-                <div class="progress-bar progress-bar-striped progress-bar-animated" style="width:100%">100%</div>
-              </div>
+          <div class="py-3">
+            <p class="px-1">HTML</p>
+            <div class="progress" style="height: 15px;">
+              <div class="progress-bar progress-bar-striped progress-bar-animated"
+                style="width:100%;background-color: #60c6dd;">100%</div>
             </div>
-
-
-
-
-            <div>
-              <p>CSS</p>
-              <div class="progress" style="height: 15px;">
-                <div class="progress-bar progress-bar-striped progress-bar-animated" style="width:80%;background-color:red">80%</div>
-              </div>
-            </div>
-
-
-
-
-
-
-
-
-            <div>
-              <p>JavaScript</p>
-              <div class="progress" style="height: 15px;">
-                <div class="progress-bar progress-bar-striped progress-bar-animated" style="width:60%;background-color:green">60%</div>
-              </div>
-            </div>
-
-
-
-
-
-
-
-
-
-
-            <div>
-              <p>Node JS</p>
-              <div class="progress" style="height: 15px;">
-                <div class="progress-bar progress-bar-striped progress-bar-animated" style="width:40%;background-color:grey">40%</div>
-              </div>
-            </div>
-
-
-
-            <div>
-              <p>Python</p>
-              <div class="progress" style="height: 15px;">
-                <div class="progress-bar progress-bar-striped progress-bar-animated" style="width:50%;background-color:yellow">50%</div>
-              </div>
-            </div>
-
-
-
-
-
-
           </div>
+
+
+
+
+          <div class="py-3">
+            <p class="px-1">CSS</p>
+            <div class="progress" style="height: 15px;">
+              <div class="progress-bar progress-bar-striped progress-bar-animated"
+                style="width:80%;background-color:rgb(38, 238, 35)">80%</div>
+            </div>
+          </div>
+
+
+
+
+          <div class="py-3">
+            <p class="px-1">JavaScript</p>
+            <div class="progress" style="height: 15px;">
+              <div class="progress-bar progress-bar-striped progress-bar-animated"
+                style="width: 50%;background-color: #7395ae;">50%</div>
+            </div>
+          </div>
+
+
+
+          <div class="py-3">
+            <p class="px-1">Node JS</p>
+            <div class="progress" style="height: 15px;">
+              <div class="progress-bar progress-bar-striped progress-bar-animated"
+                style="width:40%;background-color:#417342">40%</div>
+            </div>
+          </div>
+
+
+
+
+
         </div>
+
+
+        <div class="col-lg-6 col-10 offset-1 offset-lg-0">
+
+          <div class="py-3">
+            <p class="px-1">Express JS</p>
+            <div class="progress" style="height: 15px;">
+              <div class="progress-bar progress-bar-striped progress-bar-animated"
+                style="width:20%;background-color:#587088">50%</div>
+            </div>
+          </div>
+
+
+
+          <div class="py-3">
+            <p class="px-1">MongoDB</p>
+            <div class="progress" style="height: 15px;">
+              <div class="progress-bar progress-bar-striped progress-bar-animated"
+                style="width:5%;background-color:#587088">50%</div>
+            </div>
+          </div>
+
+
+
+          <div class="py-3">
+            <p class="px-1">jQuery</p>
+            <div class="progress" style="height: 15px;">
+              <div class="progress-bar progress-bar-striped progress-bar-animated"
+                style="width:0%;background-color:#587088">50%</div>
+            </div>
+          </div>
+
+
+
+          <div class="py-3">
+            <p class="px-1">Django</p>
+            <div class="progress" style="height: 15px;">
+              <div class="progress-bar progress-bar-striped progress-bar-animated"
+                style="width:10%;background-color:#587088">50%</div>
+            </div>
+          </div>
+
+
+
+        </div>
+
+
+
+
       </div>
-    </section>
+    </div>
+  </section>
+
+
 
 
 
