improve responsiveness by media queries ( like font-size)

--- a/html/index.html
+++ b/html/index.html
@@ -41,7 +41,7 @@
 
 
             <li class="nav-item">
-              <a class="nav-link px-3 mx-1" href="service.html">Service</a>
+              <a class="nav-link px-3 mx-1" href="#service">Service</a>
             </li>
 
             <li class="nav-item">
@@ -295,11 +295,11 @@
 
 
 
-  <section id="cardDiv" class="cardDiv p-lg-5 p-3"2
+  <section id="cardDiv" class="cardDiv p-lg-5 p-3">
 
 
     <div class="container">
-        <h2 class="text-center pb-3">My Projects</h2>
+        <h2 class="text-center pb-3">Provided Service Qualification</h2>
 
         <div class="row gy-1">
 
@@ -357,7 +357,7 @@
 
     <div class="container py-2">
 
-        <h2 class="text-center p-lg-4 py-2">Provided Service</h2>
+        <h2 class="text-center p-lg-4 py-2">My Projects</h2>
 
 
         <div class="row pt-lg-5 pt-2 gy-5">
@@ -467,10 +467,7 @@
 
         <div class="testimonials-cards ">
 
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi modi nisi magnam, laborum distinctio eum
-            vitae reiciendis dignissimos ea asperiores eos temporibus, voluptates eius, recusandae architecto
-            accusantium mollitia earum quos repellat expedita. Voluptatem quae provident sapiente laboriosam recusandae
-            harum. Recusandae!
+          <p>I don't have words to thank this man, I'm really grateful to have this channel and website in my daily routine. If you're a mere beginner, then you can trust this guy and can put your time into his content. I can assure you that it'll be worth it.
           </p>
 
           <strong class="d-block">Shi Jinphing</strong>
@@ -479,23 +476,17 @@
 
         <div class="testimonials-cards ">
 
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi modi nisi magnam, laborum distinctio eum
-            vitae reiciendis dignissimos ea asperiores eos temporibus, voluptates eius, recusandae architecto
-            accusantium mollitia earum quos repellat expedita. Voluptatem quae provident sapiente laboriosam recusandae
-            harum. Recusandae!
+          <p>For everyone who wants to level up their #Coding and #Dev skills - seriously, this channel is for you! Both basic and advanced stacks are covered on this channel, and one can learn according to his skill levels. And the icing on the cake is, everything is available for free.
           </p>
 
-          <strong class="d-block">Shi Jinphing</strong>
-          <small>Web Developer</small>
+          <strong class="d-block">Rishi Sunak</strong>
+          <small>Retail chain holder</small>
         </div>
 
         <div class="testimonials-cards ">
 
 
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi modi nisi magnam, laborum distinctio eum
-            vitae reiciendis dignissimos ea asperiores eos temporibus, voluptates eius, recusandae architecto
-            accusantium mollitia earum quos repellat expedita. Voluptatem quae provident sapiente laboriosam recusandae
-            harum. Recusandae!
+          <p>For everyone who wants to level up their #Coding and #Dev skills - seriously, this channel is for you! Both basic and advanced stacks are covered on this channel, and one can learn according to his skill levels. And the icing on the cake is, everything is available for free.
           </p>
 
           <strong class="d-block">Joe Bidean</strong>
